--- a/_profiles/telquel_ar.html
+++ b/_profiles/telquel_ar.html
@@ -28,7 +28,7 @@ parameters:
   connectivity: "Cable"
   location: "Dulles:Chrome"
   runs: 1
-  url: "http://telquel.ma"
+  url: "http://ar.telquel.ma"
 
 #
 # The URL of the WebPageTest instance to be used with this profile. Please note that
