--- a/_profiles/telquel_mobile.html
+++ b/_profiles/telquel_mobile.html
@@ -28,7 +28,7 @@ parameters:
   connectivity: "3G"
   location: "Paris:Chrome"
   runs: 1
-  url: "telquel_mobile.nextmedia.ma"
+  url: "mobile.telquel.ma"
 
 #
 # The URL of the WebPageTest instance to be used with this profile. Please note that
